# easy_predict

./: README.md  easy_predict.py  pyproject.toml  test_easy_predict.py
