[tool.poetry]
name = "easy-predict"
version = "0.1.0"
description = "Let easy_predict do the basic prediction for you"
authors = ["neelabalan <neelabalan.n@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "easy_predict"}]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "1.1.2"
numpy = "1.24.1"
scipy = "1.9.3"
xgboost = "1.7.2"
lightgbm = "3.3.3"
pandas = "1.5.2"
rich = "12.2.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.0"
ipykernel = "^6.19.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 119

[tool.pylint]
max-line-length = 119
disable = ["wrong-import-position", "missing-moudle-docstring", "two-few-public-method"]
good-names=["df", "id", "ex"]

[tool.isort]
force_single_line = true
profile = "black"